<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity">

<EditText
    android:id="@+id/editTextInput"
    android:layout_width="399dp"
    android:layout_height="88dp"
    android:layout_marginTop="260dp"
    android:autofillHints="Type your text here..."
    android:ems="10"
    android:gravity="start|top"
    android:hint="@string/enter_text_label"
    android:inputType="textMultiLine"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:text="@string/select_metric_prompt"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTextInput" />

<Spinner
    android:id="@+id/spinnerMetric"
    android:layout_width="410dp"
    android:layout_height="50dp"
    app:layout_constraintBottom_toTopOf="@+id/buttonCount"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.272" />

<Button
    android:id="@+id/buttonCount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/count_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.231" />

<TextView
    android:id="@+id/textViewResult"
    android:layout_width="118dp"
    android:layout_height="44dp"
    android:layout_marginTop="52dp"
    android:text=""
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonCount" />

</androidx.constraintlayout.widget.ConstraintLayout>